--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,16 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
-
+plugins {
+	id "org.sonarqube" version "3.3"
+}
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
+
+
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -26,16 +30,23 @@ repositories {
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
+sonarqube {
+	properties {
+		property "sonar.projectKey", "raedbahri66_spring5-mongo-recipe-app"
+		property "sonar.organization", "raedbahri66"
+		property "sonar.host.url", "https://sonarcloud.io"
+	}
+}
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	compile 'org.webjars:bootstrap:3.3.7-1'
-	compileOnly('org.projectlombok:lombok')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	implementation 'org.webjars:bootstrap:3.3.7-1'
+	implementation('org.projectlombok:lombok')
+	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 //export test coverage
