Fix Gradle and Add SonarCloud

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,12 @@ jobs:
 
       - run:
           name: Analyze on SonarCloud
-          command: gradle build sonarqube"
+          command: gradle build sonarqube
+workflows:
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
 
 
 
