Fix Gradle and Add SonarCloud

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,7 @@ jobs:
           command: gradle build sonarqube
 
 workflows:
+  version: 2
   sample:
     jobs:
       - build-and-test-and-analyze:
