--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,13 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
 	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation 'junit:junit:4.13.1'
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	implementation 'org.webjars:bootstrap:3.3.7-1'
 	implementation('org.projectlombok:lombok')
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation('org.springframework.boot:spring-boot-starter-test:2.5.5')
+	implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
 }
 
 //export test coverage
