--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	implementation 'junit:junit:4.13.1'
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	implementation 'org.webjars:bootstrap:3.3.7-1'
-	implementation('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok:1.18.20')
 	testImplementation('org.springframework.boot:spring-boot-starter-test:2.5.5')
 	implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1'
